--- a/KODE Weather App/Modules/Map/CardView.xib
+++ b/KODE Weather App/Modules/Map/CardView.xib
@@ -9,61 +9,58 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CardView" customModule="KODE_Weather_App" customModuleProvider="target">
             <connections>
-                <outlet property="cityNameLabel" destination="8ov-kp-JvP" id="G63-Q4-d8L"/>
-                <outlet property="closeButton" destination="RNf-u7-kjG" id="le3-Tg-hrG"/>
-                <outlet property="contentView" destination="iN0-l3-epB" id="kwg-Mu-mn3"/>
-                <outlet property="coordinatesLabel" destination="jhI-b4-BWH" id="ZWq-ga-WyH"/>
-                <outlet property="showWeatherButton" destination="047-XU-ExF" id="fJo-Ui-YAh"/>
+                <outlet property="cityLabel" destination="VLC-GF-uE4" id="Tai-Ad-1KS"/>
+                <outlet property="closeButton" destination="ipn-BK-hZU" id="16p-uW-vfK"/>
+                <outlet property="contentView" destination="iN0-l3-epB" id="yF8-an-hrh"/>
+                <outlet property="coordinatesLabel" destination="Syj-fk-ne0" id="Bra-So-Wqg"/>
+                <outlet property="shoWeatherButton" destination="eZd-ad-kkg" id="sUb-eZ-Glx"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="336" height="132"/>
+            <rect key="frame" x="0.0" y="0.0" width="349" height="152"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ov-kp-JvP" userLabel="City">
-                    <rect key="frame" x="16" y="16" width="50" height="24"/>
-                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VLC-GF-uE4" userLabel="City Label">
+                    <rect key="frame" x="16" y="19" width="51" height="24"/>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jhI-b4-BWH" userLabel="Coordinates">
-                    <rect key="frame" x="16" y="44" width="33" height="16"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                    <color key="textColor" systemColor="systemGray2Color" red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ipn-BK-hZU" userLabel="Close Button">
+                    <rect key="frame" x="294" y="19" width="39" height="35"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="39" id="D4g-u2-gJk"/>
+                        <constraint firstAttribute="height" constant="35" id="Lan-jT-Vrm"/>
+                    </constraints>
+                    <state key="normal" image="close"/>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eZd-ad-kkg" userLabel="Show Weather Button">
+                    <rect key="frame" x="16" y="102" width="317" height="30"/>
+                    <state key="normal" title="Show Weather"/>
+                </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Syj-fk-ne0" userLabel="Coordinates Label">
+                    <rect key="frame" x="16" y="81" width="38" height="18"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RNf-u7-kjG" userLabel="Close">
-                    <rect key="frame" x="308" y="16" width="12" height="22"/>
-                    <state key="normal" image="close"/>
-                    <connections>
-                        <action selector="closeButtonDidTapped:" destination="-1" eventType="touchUpInside" id="6PR-Er-gjZ"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="047-XU-ExF">
-                    <rect key="frame" x="16" y="92" width="304" height="32"/>
-                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
-                    <state key="normal" title="Show Weather"/>
-                    <connections>
-                        <action selector="showWeatherButtonDidTapped:" destination="-1" eventType="touchUpInside" id="4pH-Vx-vuK"/>
-                    </connections>
-                </button>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
-                <constraint firstItem="8ov-kp-JvP" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="FUP-wc-pOl"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="047-XU-ExF" secondAttribute="trailing" constant="16" id="IO6-Lp-5w8"/>
-                <constraint firstItem="047-XU-ExF" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="QZa-kA-JQ7"/>
-                <constraint firstItem="RNf-u7-kjG" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="ZIr-a4-a8A"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="047-XU-ExF" secondAttribute="bottom" constant="8" id="rMU-As-a0g"/>
-                <constraint firstAttribute="trailing" secondItem="RNf-u7-kjG" secondAttribute="trailing" constant="16" id="sfC-WD-a0w"/>
-                <constraint firstItem="jhI-b4-BWH" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="vwz-Fc-Xev"/>
-                <constraint firstItem="8ov-kp-JvP" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="xLJ-zv-BCO"/>
-                <constraint firstItem="jhI-b4-BWH" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="yAG-sg-ghe"/>
+                <constraint firstAttribute="trailing" secondItem="ipn-BK-hZU" secondAttribute="trailing" constant="16" id="82R-zQ-lNJ"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="eZd-ad-kkg" secondAttribute="bottom" constant="20" id="LsQ-hZ-eJ3"/>
+                <constraint firstItem="VLC-GF-uE4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="Rst-Jm-Muw"/>
+                <constraint firstItem="VLC-GF-uE4" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="19" id="V0D-bN-pIT"/>
+                <constraint firstItem="ipn-BK-hZU" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="19" id="XqU-hv-fiH"/>
+                <constraint firstItem="eZd-ad-kkg" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="gf3-jf-Nb7"/>
+                <constraint firstItem="Syj-fk-ne0" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="h1f-UA-QuJ"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="eZd-ad-kkg" secondAttribute="trailing" constant="16" id="p1V-Pb-tzl"/>
+                <constraint firstItem="Syj-fk-ne0" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="37" id="q7q-5d-bo7"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="81.159420289855078" y="-102.45535714285714"/>
+            <point key="canvasLocation" x="90.579710144927546" y="-95.758928571428569"/>
         </view>
     </objects>
     <resources>
