--- a/KODE Weather App/Modules/Weather/WeatherViewController.xib
+++ b/KODE Weather App/Modules/Weather/WeatherViewController.xib
@@ -45,7 +45,7 @@
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lVF-cK-JBz" userLabel="Weather State Label">
-                    <rect key="frame" x="20" y="452" width="44" height="22"/>
+                    <rect key="frame" x="20" y="452" width="107" height="22"/>
                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -86,7 +86,7 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="O6V-kn-GoS">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="O6V-kn-GoS">
                     <rect key="frame" x="176" y="267" width="238" height="629"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="629" id="teo-YH-DTb"/>
@@ -106,6 +106,7 @@
                 <constraint firstAttribute="bottom" secondItem="O6V-kn-GoS" secondAttribute="bottom" id="GX2-mT-QcC"/>
                 <constraint firstItem="O6V-kn-GoS" firstAttribute="leading" secondItem="Gpj-Pt-z2w" secondAttribute="trailing" constant="8" id="GoL-ne-IcL"/>
                 <constraint firstItem="sxq-lf-iL4" firstAttribute="top" secondItem="1VK-r7-cjo" secondAttribute="bottom" constant="36" id="LNg-AF-Zcy"/>
+                <constraint firstItem="O6V-kn-GoS" firstAttribute="leading" relation="lessThanOrEqual" secondItem="lVF-cK-JBz" secondAttribute="trailing" constant="49" id="MFi-e9-ern"/>
                 <constraint firstItem="1VK-r7-cjo" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="PYn-k7-DA3"/>
                 <constraint firstItem="p2u-a8-UVx" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="68" id="RBz-8v-tg0"/>
                 <constraint firstItem="BlP-lE-nQW" firstAttribute="top" secondItem="Gpj-Pt-z2w" secondAttribute="bottom" constant="8" id="TmJ-Wh-u8N"/>
